--- a/tyansec/index.html
+++ b/tyansec/index.html
@@ -27,13 +27,13 @@
 					<li><a href="news/index.html">天元新闻</a></li>
 					<li><a href="shop/index.html">天元商品</a></li>
 					<li>
-						<a href="#">尚未开发</a>
+						<a href="photos/index.html">大图库</a>
 						<ul>
 							<li><a href="left-sidebar.html">尚未开发</a></li>
 							<li><a href="right-sidebar.html">尚未开发</a></li>
 							<li><a href="no-sidebar.html">尚未开发</a></li>
 							<li>
-								<a href="#">Submenu</a>
+								<a href="#">副选单</a>
 								<ul>
 									<li><a href="#">尚未开发</a></li>
 									<li><a href="#">尚未开发</a></li>
@@ -48,7 +48,7 @@
 			</nav>
 		</header>
 
-		<!-- Banner -->
+		<!-- 首页 -->
 		<section id="banner">
 			<div class="content">
 				<header>
@@ -125,7 +125,7 @@
 			<a href="#four" class="goto-next scrolly">Next</a>
 		</section>
 
-		<!-- Four -->
+		<!-- 城镇介绍 -->
 		<section id="four" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
@@ -157,7 +157,7 @@
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-file"></span>
 							<h3>群内和谐</h3>
-							<p>在Q群和游戏只聊游戏细节和梗 绝没有人破口大骂 啊..还有吹牛</p>
+							<p>为什么问我没有群规？因为我们的镇员都很乖 不需要镇规！</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-lock"></span>
@@ -169,13 +169,13 @@
 			</div>
 		</section>
 
-		<!-- Five-->
+		<!-- 目标 -->
 		<section id="five" class="wrapper style2 special fade">
 			<div class="container">
 				<header>
 					<h2>近期目标</h2>
 					<li>把工业区的机器移动到新区域 并且把现有工业区进行外观翻新(jins,123666,darculax)</li>
-					<li>兴建高铁站(MSA_Sasuke)</li>
+					<li>兴建高铁站(已完成)</li>
 					<li>地狱/下界发展(jins,123666)</li>
 					<li>完成 yuanOvO 的建筑区</li>
 				</header>
@@ -190,14 +190,14 @@
 			</div>
 		</section>
 
-		<!-- Six-->
+		<!-- 按钮 -->
 		<section id="six" class="wrapper style2 special fade">
 			<div class="container">
 				<header>
 					<h2>想要一起来玩吗？</h2>
 					<a href="https://qm.qq.com/cgi-bin/qm/qr?k=kFXcuBhbUjjPiNQLYkfxUcIqdSh3EkCk&jump_from=webapi"
 						class="button" style="margin-right: 10px;">QQ群：556818377</a>
-					<a href="https://www.newnan.city/"
+					<a href="https://www.newnan.city/%E5%85%A5%E5%9D%91%E6%8C%87%E5%8D%97.html"
 						class="button">返回牛腩官网</a>
 					<a href="https://new-nan-city---tyan-sec.webnode.tw/"
 						class="button" style="margin-left: 10px;">天元旧官网</a>
@@ -205,7 +205,7 @@
 			</div>
 		</section>
 
-		<!-- Footer -->
+		<!-- 介绍 -->
 		<footer id="footer">
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/kclau103/" class="icon brands alt fa-facebook-f"><span class="label"></span></a></li>
