--- a/tyansec/shop/index.html
+++ b/tyansec/shop/index.html
@@ -14,10 +14,10 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Wrapper -->
+		<!-- 整体 -->
 			<div id="wrapper">
 
-				<!-- Header -->
+				<!-- 顶部 -->
 					<header id="header">
 						<div class="logo">
 							<span class="icon fa-gem"></span>
@@ -35,11 +35,12 @@
 								<li><a href="#nonsale">非卖区</a></li>
 								<li><a href="#friends">合作伙伴</a></li>
 								<li><a href="#material">原材料提供</a></li>
+								<li><a href="../index.html">返回官网</a></li>
 							</ul>
 						</nav>
 					</header>
 
-				<!-- Main -->
+				<!-- 页面 -->
 					<div id="main">
 
 						<!-- material -->
@@ -69,13 +70,17 @@
 							<article id="friends">
 								<h2 class="major">合作伙伴</h2>
 								<ul>
-									<h3>如何成为合作伙伴?</h3>
+									<h3 class="major">简介</h3>
+									<p>希望成为合作伙伴的城镇与天元镇之间能够互惠互利
+									<p>为其他城镇的发展出一份力</p>
+									<h3 class="major">如何成为合作伙伴?</h3>
 									<p>任何城镇都可向天元管理层申请合作伙伴 一旦通过则能够成为<strong>永久合作伙伴</strong></p>
-									<h3>成为天元的合作伙伴有什么好处?</h3>
+									<h3 class="major">成为天元的合作伙伴有什么好处?</h3>
 									<p>1.可以获得天元小部分资源</p>
 									<p>2.持有天元商品专属优惠券<strong>在商城预订物品拥有七折商品优惠</strong></p>
-									<h2 class="major">合作伙伴名单（城镇）</h2>
+									<h3 class="major">合作伙伴名单（城镇）</h3>
 									<p><strong>未央镇</strong></p>
+									<p><strong>云梦泽</strong></p>
 								</ul>
 							</article>
 
@@ -215,7 +220,7 @@
 
 					</div>
 
-				<!-- Footer -->
+				<!-- 网页介绍 -->
 		<footer id="footer">
 			<ul class="icons">
 				<li><a href="https://www.facebook.com/kclau103/" class="icon brands alt fa-facebook-f"><span class="label"></span></a></li>
